--- a/sass/partials/_bio.scss
+++ b/sass/partials/_bio.scss
@@ -1,12 +1,25 @@
 #bio {
-	background-color: $mofongoGreen;
-	color: #fff;
+	background-color: #eee;
 	.contain {
 		position: relative;
-		padding: 160px 15px;
+		padding: 120px 15px 140px 15px;
+		text-align: center;
+		overflow: hidden;
+		img {
+			max-width: 50px;
+			display: block;
+			margin: auto;
+			padding-bottom: 30px;
+		}
 		.title {
 			text-align: center;
 			position: relative;
+			font-size: 40px;
+			font-weight: 600;
+			@media screen and (max-width: 500px) {
+				font-size: 24px;
+				white-space: nowrap;
+		 	}
 			.typed {
 				position: relative;
 				&:after {
@@ -17,9 +30,20 @@
 					background-color: #fff;
 					bottom: -4px;
 					left: 4px;
-
 				}
 			}
+		}
+		.typed-cursor {
+			font-size: 40px;
+			font-weight: 300;
+		}
+		p {
+			max-width: 550px;
+			margin: auto;
+			padding-top: 20px;
+			line-height: 32px;
+			color: $mofongoCharcoal;
+			@include mofo-p;
 		}
 	}
 }
